# CS2_OCaml_Flipper

./: .gitignore  Readme.md  bisect291332042.coverage  bisect352841259.coverage  bisect543490447.coverage  bisect603232690.coverage  bisect975965835.coverage  config.txt  cs2_watcher.opam  data_set.csv  dune  dune-project  even_dataset.csv  grads.scm  package-lock.json  package.json  test.csv  weights.scm  weights2.scm
_build/: .db  .digest-db  log
_build/.sandbox/1c17b2e52d79ef2c7940ff4aad7b4c0f/default/src/: cs2_watch.ml
_build/.sandbox/dace0d483983b4d2e602671aa7cf0302/default/src/: cs2_watch.mli
_build/default/.dune/: configurator  configurator.v2
_build/default/.ppx/455a706311ae974412851d5f5e6befec/: dune__exe___ppx.cmo  dune__exe___ppx.cmx
_build/default/.ppx/b0cad8c1af50fd7f49a9b13069f07659/: dune__exe___ppx.cmo  dune__exe___ppx.cmx
_build/default/src/: cs2_watch.cma  cs2_watch.cmxa  cs2_watch.cmxs  cs2_watch.ml  cs2_watch.mli  cs2_watch.pp.ml  cs2_watch.pp.mli  dune  prediction.ml  prediction.mli  prediction.pp.ml  prediction.pp.mli
_build/default/src/.cs2_watch.eobjs/byte/: dune__exe__Cs2_watch.cmi  dune__exe__Cs2_watch.cmti
_build/default/src/.cs2_watch.eobjs/native/: dune__exe__Cs2_watch.cmx
_build/default/src/.cs2_watch.objs/byte/: cs2_watch.cmi  cs2_watch.cmo  cs2_watch.cmt  cs2_watch.cmti
_build/default/src/.cs2_watch.objs/native/: cs2_watch.cmx
_build/default/src/.merlin-conf/: exe-cs2_watch  exe-prediction  lib-cs2_watch
_build/default/src/.prediction.eobjs/byte/: dune__exe__Prediction.cmi  dune__exe__Prediction.cmti
_build/default/src/.prediction.eobjs/native/: dune__exe__Prediction.cmx
app/: bsconfig.json  package-lock.json  package.json
app/src/: App.res
app/src/components/: Header.res  LineGraph.res  WatcherItem.res
app/src/pages/: Trends.res  Watcher.res
dream-project-template/: esy.json
dream-project-template/_build/: .db  .digest-db  log
dream-project-template/_build/default/.hello.eobjs/byte/: dune__exe__Hello.cmti
dream-project-template/_build/default/.hello.eobjs/native/: dune__exe__Hello.cmx
dream-project-template/_build/default/.merlin-conf/: exe-hello
server/: weights.scm  weights2.scm
server/src/: app.ml  cs2_controller.ml  cs2_controller.mli  cs2_service.ml  cs2_service.mli  cs2_watch.ml  cs2_watch.mli  data_set.ml  data_set.mli  dune  item_list.json  prediction.ml  prediction.mli  prediction2.ml  prediction2.mli
server/tests/: example_cs2_item.json  example_history.json  example_item.json  example_item_list.json  example_price_point.json  tests.ml
src/: cs2_market.mli  cs2_watch.ml  cs2_watch.mli  data_set.ml  data_set.mli  dune  item_list.ml  item_list.mli  prediction.ml  prediction.mli
tests/: dune  tests.ml
