(library
 (name cs2_watch)
 (modules cs2_watch)
 (libraries yojson core cohttp-lwt-unix)
 (preprocess
  (pps ppx_jane ppx_deriving_yojson)))

(library
 (name item_list)
 (modules item_list)
 (preprocess
  (pps ppx_jane ppx_deriving_yojson)))

(library
 (name prediction)
 (modules prediction)
 (libraries yojson core torch csv)
 (preprocess
  (pps ppx_jane)))

(executables
 (names data_set) ;add more executables and their modules here
 (modules data_set)
 (libraries yojson core cs2_watch item_list) ;add torch back later
 (preprocess
  (pps ppx_jane ppx_deriving_yojson)))

; (executable
;  (name cs2_watch)
;  (modules cs2_watch)
;  (preprocess
;   (pps ppx_deriving_yojson ppx_jane))
;  (libraries core yojson torch cohttp-lwt-unix ppx_deriving_yojson.runtime))

; additional installations: cohttp, cohttp-lwt, cohttp-unix, yojson, lwt_ssl
