(library
 (name cs2_watch)
 (modules cs2_watch)
 (libraries yojson core cohttp-lwt-unix)
 (preprocess
  (pps ppx_jane ppx_deriving_yojson)))

; (library
;  (name prediction)
;  (modules prediction)
;  (libraries yojson core torch csv)
;  (preprocess
;   (pps ppx_jane)))

(library
 (name cs2_service)
 (modules cs2_service)
 (libraries core dream cs2_watch)
 (preprocess
  (pps ppx_jane ppx_deriving_yojson)))

(library
 (name cs2_controller)
 (modules cs2_controller)
 (libraries core dream cs2_service)
 (preprocess
  (pps ppx_jane ppx_deriving_yojson)))

(executables
 (names app data_set prediction)
 (modules app data_set prediction)
 (libraries core dream cs2_controller yojson torch cs2_watch csv)
 (preprocess
  (pps lwt_ppx ppx_jane ppx_deriving_yojson)))
